# memoir

./: .gitignore  CLAUDE.md  CONFIG.md  Cargo.toml  HTML.md  README.md  prek.toml
.github/workflows/: ci.yml  release.yml
src/: cluster.rs  config.rs  lib.rs  main.rs  session_log.rs  sync.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/browser/: chromium.rs  firefox.rs  mod.rs  orion.rs  safari.rs
src/embed/: mod.rs
src/fetch/: extract.rs  mod.rs
src/index/: mod.rs  store.rs
src/mcp/: mod.rs
src/rag/: mod.rs
src/server/: handlers.rs  mod.rs
src/ui/: index.html  log.html  manage.html  palette.html  settings.html  setup.html
tests/api/: ask.rs  health_check.rs  helpers.rs  index_page.rs  log.rs  main.rs  recent.rs  search.rs  top_sites.rs
